# doidownloader

./: .gitignore  README.md  doidownloader.py  pyproject.toml  robots.txt
.github/workflows/: coverage.yml  publish.yml  test.yml
doidownloader/: __init__.py  __main__.py  core.py  crawl_delays.py  db.py  doidownloader.py  files.py  html.py  strategies.py
tests/: test_doidownloader.py  test_html.py
