[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "doidownloader"
authors = [{name = "Raf Guns", email = "raf.guns@uantwerpen.be"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.23.3",
    "lxml>=4.9.1",
    "rich>=12.6",
]

[project.urls]
Home = "https://github.com/rafguns/doidownloader/"
