[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "doidownloader"
authors = [{name = "Raf Guns", email = "raf.guns@uantwerpen.be"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.23.3",
    "lxml>=4.9.1",
    "rich>=12.6",
]

[project.urls]
Home = "https://github.com/rafguns/doidownloader/"

[tool.ruff]
target-version = "py310"
# See https://beta.ruff.rs/docs/rules/
select = [
    "A", # builtin shadowing
    "ANN", # annotations
    "ARG", # unsued arguments
    "B", # bugbear
    "C4", # comprehensions
    "C90", # mccabe complexity
    "E", # style errors
    "EM", # error messages
    "F", # flakes
    "FBT", # boolean trap
    "G", # logging format
    "I", # import sorting
    "ISC", # string concatenation
    "N", # naming
    "PGH", # pygrep-hooks
    "PIE", # miscellaneous
    "PL", # pylint
    "PT", # pytest style
    "Q", # quotes
    "RET", # return
    "RSE", # raise
    "RUF", # Ruff
    "SIM", # simplify
    "T20", # print
    "UP", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]
# Don' warn about type annotations for self, *args, **kwargs
ignore = ["ANN002", "ANN003", "ANN101"]

[tool.ruff.per-file-ignores]
# Ignore unused imports in __init__.py
"__init__.py" = ["F401"]
# Ignore missing type annotations in tests
"tests/*" = ["ANN"]
